--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h2> My current favourite song is</h2>
+		<a href="https://www.youtube.com/watch?v=R73JQatX1vU">heeriye dil jaaniye</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
